--- a/src/components/HeroSection/HeroSection2.css
+++ b/src/components/HeroSection/HeroSection2.css
@@ -1,32 +1,22 @@
-.hero-heading {
-  line-height: 40px !important;
-  font-size: 30px !important;
+@media screen and (min-width: 768px) {
+  .street-img-container {
+    /*position: fixed;*/
+    /*right: 0;*/
+    /*top: 0;*/
+    background-image: url("/img/background.png");
+    background-position: right top;
+    background-repeat: no-repeat;
+  }
 }
 
-@media screen and (min-width: 575px) {
-  .hero-heading {
-    line-height: 48px !important;
-    font-size: 36px !important;
-  }
+.street-img-right-div {
+  background-image: url("/img/background.png");
+  background-position: right top;
+  background-repeat: no-repeat;
 }
 
 @media screen and (min-width: 768px) {
-  .hero-heading {
-    line-height: 60px !important;
-    font-size: 46px !important;
-  }
-}
-
-@media screen and (min-width: 990px) {
-  .hero-heading {
-    line-height: 65px !important;
-    font-size: 50px !important;
-  }
-}
-
-@media screen and (min-width: 1440px) {
-  .hero-heading {
-    line-height: 98px !important;
-    font-size: 60px !important;
+  .street-img-right-div {
+    background-image: none;
   }
 }
