--- a/src/index.css
+++ b/src/index.css
@@ -9,3 +9,69 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+.hero-heading {
+  line-height: 40px !important;
+  font-size: 30px !important;
+}
+
+@media screen and (min-width: 575px) {
+  .hero-heading {
+    line-height: 48px !important;
+    font-size: 36px !important;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .hero-heading {
+    line-height: 60px !important;
+    font-size: 46px !important;
+  }
+}
+
+@media screen and (min-width: 990px) {
+  .hero-heading {
+    line-height: 65px !important;
+    font-size: 50px !important;
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  .hero-heading {
+    line-height: 98px !important;
+    font-size: 60px !important;
+  }
+}
+
+.ride-heading {
+  line-height: 40px !important;
+  font-size: 30px !important;
+}
+
+@media screen and (min-width: 575px) {
+  .ride-heading {
+    line-height: 35px !important;
+    font-size: 28px !important;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .ride-heading {
+    line-height: 35px !important;
+    font-size: 28px !important;
+  }
+}
+
+@media screen and (min-width: 990px) {
+  .ride-heading {
+    line-height: 42px !important;
+    font-size: 35px !important;
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  .ride-heading {
+    line-height: 45px !important;
+    font-size: 38px !important;
+  }
+}
