--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,10 @@ code {
     monospace;
 }
 
+.alternative-background {
+  background-color: #e9e9f7;
+}
+
 .hero-heading {
   line-height: 40px !important;
   font-size: 30px !important;
